--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: US/Pacific
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://metayuan.com
+url: http://yuannow.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -125,6 +125,7 @@ feed:
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: heroku
-  repo: https://git.heroku.com/hexoblogdemo.git
+  type: git
+  repo: https://github.com/rocheers/hexoblog
+  branch: online
   message: "{{ now('YYYY-MM-DD HH:mm:ss') }}"
