--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "hexo": "^3.2.0",
     "hexo-autoprefixer": "^1.0.0",
     "hexo-deployer-git": "^0.3.1",
-    "hexo-deployer-heroku": "^0.1.2",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
@@ -17,10 +16,12 @@
     "hexo-generator-json-content": "^3.0.1",
     "hexo-generator-search": "^2.1.1",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-inject": "^1.0.0",
+    "hexo-math": "^3.0.4",
     "hexo-renderer-ejs": "^0.3.0",
-    "hexo-renderer-jade": "^0.4.1",
     "hexo-renderer-less": "^0.2.0",
     "hexo-renderer-marked": "^0.3.0",
+    "hexo-renderer-mathjax": "^0.6.0",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0"
   }
